# supercat

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  manifest.json  nginx.conf  pyproject.toml  sw.js  weather.py
.github/: hivemoot.yml
.github/workflows/: ci.yml  deploy.yml
analyst/: AGENTS.md  CODEBASE_ANALYSIS.md  PHASE2_ANALYSIS.md  PHASE3_ANALYSIS.md  PHASE5_ANALYSIS.md
backend_dev/: ACTIVITY.md
designer/: DESIGN-GUIDE.md  README.md
devops/: README.md
frontend/: README.md  styles.css
tech_lead/: ARCHITECTURE_BLUEPRINT.md  README.md
tester/: AGENTS.md
tests/: test_sw.js  test_weather.js  test_weather.py
