[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "supercat-weather"
version = "2.0.0"
description = "Terminal weather forecast from Open-Meteo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
supercat-weather = "weather:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
