[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "supercat-weather"
version = "2.0.0"
description = "Terminal weather forecast from Open-Meteo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/Dmitrii-Nefedov/supercat"
Source = "https://github.com/Dmitrii-Nefedov/supercat"
Issues = "https://github.com/Dmitrii-Nefedov/supercat/issues"

[project.scripts]
supercat-weather = "weather:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
